fix daterange button stretch with flexbox align-items

--- a/app/scss/_daterange.scss
+++ b/app/scss/_daterange.scss
@@ -3,6 +3,7 @@
 .c-daterange {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 
   button {
     @extend %o-button__8;
